@@ -1,12 +1,12 @@
-// Copyright 2020-2022 The Defold Foundation
+// Copyright 2020-2025 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
 // this file except in compliance with the License.
-// 
+//
 // You may obtain a copy of the License, together with FAQs at
 // https://www.defold.com/license
-// 
+//
 // Unless required by applicable law or agreed to in writing, software distributed
 // under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 // CONDITIONS OF ANY KIND, either express or implied. See the License for the
@@ -32,6 +32,8 @@ import java.awt.font.GlyphVector;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.FlatteningPathIterator;
 import java.awt.geom.PathIterator;
+import java.awt.geom.Area;
+import java.awt.geom.Rectangle2D;
 import java.awt.image.BufferedImage;
 import java.awt.image.ColorModel;
 import java.awt.image.ConvolveOp;
@@ -47,53 +49,43 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.nio.ByteBuffer;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.TreeSet;
+import java.util.Set;
 
 import javax.imageio.ImageIO;
 
 import org.apache.commons.io.FilenameUtils;
 import com.sun.jna.Pointer;
 
-import com.dynamo.bob.TexcLibrary;
-import com.dynamo.bob.TexcLibrary.PixelFormat;
-import com.dynamo.bob.TexcLibrary.CompressionLevel;
-import com.dynamo.bob.TexcLibrary.CompressionType;
+import com.dynamo.bob.pipeline.Texc;
+import com.dynamo.bob.pipeline.TexcLibraryJni;
 
+import com.dynamo.bob.pipeline.BuilderUtil;
 import com.dynamo.bob.pipeline.TextureGeneratorException;
 
+import com.dynamo.bob.util.StringUtil;
+import com.dynamo.bob.util.MurmurHash;
 import com.dynamo.bob.font.BMFont.BMFontFormatException;
 import com.dynamo.bob.font.BMFont.Char;
 import com.dynamo.render.proto.Font.FontDesc;
 import com.dynamo.render.proto.Font.FontMap;
+import com.dynamo.render.proto.Font.GlyphBank;
 import com.dynamo.render.proto.Font.FontTextureFormat;
 import com.dynamo.render.proto.Font.FontRenderMode;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.TextFormat;
+import org.apache.commons.lang3.StringUtils;
 
-class Glyph {
-    int index;
-    int c;
-    int width;
-    int advance;
-    int leftBearing;
-    int ascent;
-    int descent;
-    int x;
-    int y;
-    int cache_entry_offset;
-    int cache_entry_size;
-    GlyphVector vector;
-    BufferedImage image;
-};
-
-class OrderComparator implements Comparator<Glyph> {
+class OrderComparator implements Comparator<Fontc.Glyph> {
     @Override
-    public int compare(Glyph o1, Glyph o2) {
-        return (new Integer(o1.index)).compareTo(o2.index);
+    public int compare(Fontc.Glyph o1, Fontc.Glyph o2) {
+        return (Integer.valueOf(o1.index)).compareTo(o2.index);
     }
 }
 
@@ -133,26 +125,145 @@ class BlendComposite implements Composite {
 
 public class Fontc {
 
+    public static final char[] ASCII_7BIT;
+    static {
+        int start = 32;
+        int end = 126;
+        ASCII_7BIT = new char[end - start + 1];
+        for (int i = start; i <= end; i++) {
+            ASCII_7BIT[i - start] = (char) i;
+        }
+    }
+
     public enum InputFontFormat {
-        FORMAT_TRUETYPE, FORMAT_BMFONT
+        FORMAT_TRUETYPE,
+        FORMAT_BMFONT
     };
+
+    public class Glyph {
+        public int           index;
+        public int           c;
+        public int           width;
+        public int           advance;
+        public int           leftBearing;
+        public int           ascent;
+        public int           descent;
+        public int           x;
+        public int           y;
+        public int           cache_entry_offset;
+        public int           cache_entry_size;
+        public GlyphVector   vector;
+        public BufferedImage image;
+    };
+
+    static final float sdfEdge          = 0.75f;
+    private InputFontFormat inputFormat = InputFontFormat.FORMAT_TRUETYPE;
+    private Stroke outlineStroke        = null;
+    private int channelCount            = 3;
+    private FontDesc fontDesc;
+    private GlyphBank.Builder glyphBankBuilder;
+
+    private ArrayList<Glyph> glyphs = new ArrayList<Glyph>();
+
+    private Font font;
+    private BMFont bmfont;
+
+    public static long FontDescToHash(FontDesc fontDesc) {
+        FontDesc.Builder fontDescbuilder = FontDesc.newBuilder();
+
+        fontDescbuilder.mergeFrom(fontDesc);
+        FontDesc desc = fontDescbuilder.build();
+
+        // the list of parameters which affect the glyph_bank
+        String result = ""
+            + desc.getFont()
+            + desc.getSize()
+            + desc.getAntialias()
+            + desc.getOutlineWidth()
+            + desc.getShadowBlur()
+            + desc.getCharacters()
+            + desc.getOutputFormat()
+            + desc.getAllChars()
+            + desc.getCacheWidth()
+            + desc.getCacheHeight()
+            + desc.getRenderMode();
+
+        return MurmurHash.hash64(result);
+    }
 
     // These values are the same as font_renderer.cpp
     static final int LAYER_FACE    = 0x1;
     static final int LAYER_OUTLINE = 0x2;
     static final int LAYER_SHADOW  = 0x4;
 
-    static final float sdf_edge = 0.75f;
+    // The fontMapLayerMask contains a bitmask of the layers that should be rendered
+    // by the font renderer. Note that this functionality requires that the render mode
+    // property of the font resource must be set to MULTI_LAYER. Default behaviour
+    // is to render the font as single layer (for compatability reasons).
+    public static int GetFontMapLayerMask(FontDesc fontDesc)
+    {
+        int fontMapLayerMask = LAYER_FACE;
 
-    private InputFontFormat inputFormat = InputFontFormat.FORMAT_TRUETYPE;
-    private Stroke outlineStroke = null;
-    private int channelCount = 3;
-    private FontDesc fontDesc;
-    private FontMap.Builder fontMapBuilder;
-    private ArrayList<Glyph> glyphs = new ArrayList<Glyph>();
+        if (fontDesc.getRenderMode() == FontRenderMode.MODE_MULTI_LAYER)
+        {
+            if (fontDesc.getOutlineAlpha() > 0 &&
+                fontDesc.getOutlineWidth() > 0)
+            {
+                fontMapLayerMask |= LAYER_OUTLINE;
+            }
 
-    private Font font;
-    private BMFont bmfont;
+            if (fontDesc.getShadowAlpha() > 0 &&
+                fontDesc.getAlpha() > 0)
+            {
+                fontMapLayerMask |= LAYER_SHADOW;
+            }
+        }
+
+        return fontMapLayerMask;
+    }
+
+    // used by the font builder
+    public static int GetFontMapPadding(FontDesc fontDesc)
+    {
+        if (isBitmapFont(fontDesc)) {
+            return 0;
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
+            // The +1 is needed to give a little bit of extra padding since the spread
+            // always gets padded by the sqrt of a pixel diagonal
+            return fontDesc.getShadowBlur() + (int)(fontDesc.getOutlineWidth()) + 1;
+        } else {
+            return Math.min(4, fontDesc.getShadowBlur()) + (int)(fontDesc.getOutlineWidth());
+        }
+    }
+
+    public static float GetFontMapSdfSpread(FontDesc fontDesc)
+    {
+        return getPaddedSdfSpread(fontDesc.getOutlineWidth());
+    }
+
+    public static float GetFontMapSdfOutline(FontDesc fontDesc)
+    {
+        float sdfSpread = GetFontMapSdfSpread(fontDesc);
+        return calculateSdfEdgeLimit(-fontDesc.getOutlineWidth(), sdfSpread);
+    }
+
+    public static float GetFontMapSdfShadow(FontDesc fontDesc)
+    {
+        float shadowBlur = (float)fontDesc.getShadowBlur();
+        float sdfShadowSpread = getPaddedSdfSpread(shadowBlur);
+        float shadowEdge = calculateSdfEdgeLimit(-shadowBlur, sdfShadowSpread);
+
+        // Special case!
+        // If there is no blur, the shadow should essentially work the same way as the outline.
+        // This enables effects like a hard drop shadow. In the shader, the pseudo code
+        // that does this looks something like this:
+        // shadow_alpha = mix(shadow_alpha,outline_alpha,floor(shadowEdge))
+        if (fontDesc.getShadowBlur() == 0)
+        {
+            shadowEdge = 1.0f;
+        }
+        return shadowEdge;
+    }
 
     public interface FontResourceResolver {
         public InputStream getResource(String resourceName) throws FileNotFoundException;
@@ -162,8 +273,16 @@ public class Fontc {
 
     }
 
-    public InputFontFormat getInputFormat() {
-        return inputFormat;
+    public ArrayList<Glyph> getGlyphs() {
+        return glyphs;
+    }
+
+    public GlyphBank getGlyphBank() {
+        return glyphBankBuilder.build();
+    }
+
+    private static boolean isBitmapFont(FontDesc fd) {
+        return StringUtil.toLowerCase(fd.getFont()).endsWith("fnt");
     }
 
     public void TTFBuilder(InputStream fontStream) throws FontFormatException, IOException {
@@ -172,19 +291,26 @@ public class Fontc {
 
         if (!fontDesc.getAllChars()) {
 
-            // 7-bit ASCII. Note inclusive range [32,126]
-            for (int i = 32; i <= 126; ++i) {
-                characters.add(i);
+            String chars = fontDesc.getCharacters();
+            if (!StringUtils.isEmpty(chars)) {
+                for (int i = 0; i < chars.length(); i++) {
+                    char c = chars.charAt(i);
+                    characters.add((int) c);
+                }
             }
-
-            String extraCharacters = fontDesc.getExtraCharacters();
-            for (int i = 0; i < extraCharacters.length(); i++) {
-                char c = extraCharacters.charAt(i);
-                characters.add((int)c);
+            else {
+                for (char c : ASCII_7BIT) {
+                    characters.add((int) c);
+                }
+                String extraCharacters = fontDesc.getExtraCharacters();
+                for (int i = 0; i < extraCharacters.length(); i++) {
+                    char c = extraCharacters.charAt(i);
+                    characters.add((int) c);
+                }
             }
-
         }
-
+        Set<Integer> deDup = new TreeSet<Integer>(characters);
+        characters = new ArrayList<Integer>(deDup);
 
         if (fontDesc.getOutlineWidth() > 0.0f) {
             outlineStroke = new BasicStroke(fontDesc.getOutlineWidth() * 2.0f);
@@ -236,22 +362,21 @@ public class Fontc {
             }
         }
 
-        BufferedImage image;
-        Graphics2D g;
-        image = new BufferedImage(1024, 1024, BufferedImage.TYPE_3BYTE_BGR);
-        g = image.createGraphics();
+        BufferedImage image = new BufferedImage(256, 256, BufferedImage.TYPE_3BYTE_BGR);
+        Graphics2D g        = image.createGraphics();
         g.setBackground(Color.BLACK);
         g.clearRect(0, 0, image.getWidth(), image.getHeight());
         setHighQuality(g);
 
         FontMetrics fontMetrics = g.getFontMetrics(font);
-        int maxAscent = fontMetrics.getMaxAscent();
-        int maxDescent = fontMetrics.getMaxDescent();
-        fontMapBuilder.setMaxAscent(maxAscent)
-                      .setMaxDescent(maxDescent)
-                      .setShadowX(fontDesc.getShadowX())
-                      .setShadowY(fontDesc.getShadowY());
 
+        Rectangle2D rect = fontMetrics.getMaxCharBounds(g);
+
+        glyphBankBuilder.setMaxAscent(fontMetrics.getMaxAscent())
+                        .setMaxDescent(fontMetrics.getMaxDescent())
+                        .setMaxAdvance(fontMetrics.getMaxAdvance())
+                        .setMaxWidth((float)rect.getWidth())
+                        .setMaxHeight((float)rect.getHeight());
     }
 
 
@@ -294,11 +419,11 @@ public class Fontc {
             glyphs.add(glyph);
         }
 
-        fontMapBuilder.setMaxAscent(maxAscent)
+        glyphBankBuilder.setMaxAscent(maxAscent)
                       .setMaxDescent(maxDescent);
     }
 
-    private float getPaddedSdfSpread(float spreadInput)
+    private static float getPaddedSdfSpread(float spreadInput)
     {
         // Make sure the output spread value is not zero. We distribute the distance values over
         // the spread when we generate the DF glyphs, so if this value is zero we won't be able to map
@@ -308,18 +433,19 @@ public class Fontc {
         return sqrt2 + spreadInput;
     }
 
-    private float calculateSdfEdgeLimit(float width, float spread)
+    private static float calculateSdfEdgeLimit(float width, float spread)
     {
         // Normalize the incoming value to [-1,1]
         float sdfLimitValue = width / spread;
 
         // Map the outgoing limit to the same 'space' as the face edge.
-        return sdfLimitValue * (1.0f - sdf_edge) + sdf_edge;
+        return sdfLimitValue * (1.0f - sdfEdge) + sdfEdge;
     }
 
-    private ByteBuffer toByteArray(BufferedImage image, int width, int height, int bpp, int targetBpp) throws IOException {
+    private byte[] toByteArray(BufferedImage image, int width, int height, int bpp, int targetBpp) throws IOException {
         int dataSize = width * height * bpp;
-        ByteBuffer buffer = ByteBuffer.allocateDirect(dataSize);
+        byte[] tmp = new byte[dataSize];
+        int cursor = 0;
 
         int[] rasterData = new int[width * height * 4];
         image.getRaster().getPixels(0, 0, width, height, rasterData);
@@ -339,17 +465,18 @@ public class Fontc {
                 if (bpp > 3)
                     alpha = rasterData[i + 3];
 
-                buffer.put((byte)(red & 0xFF));
+                tmp[cursor++] = (byte)(red & 0xFF);
                 if (targetBpp > 1)
-                    buffer.put((byte)(green & 0xFF));
+                    tmp[cursor++] = (byte)(green & 0xFF);
                 if (targetBpp > 2)
-                    buffer.put((byte)(blue & 0xFF));
+                    tmp[cursor++] = (byte)(blue & 0xFF);
                 if (targetBpp > 3)
-                    buffer.put((byte)(alpha & 0xFF));
+                    tmp[cursor++] = (byte)(alpha & 0xFF);
             }
         }
-        buffer.flip(); // limit is set to current position, and position is set to zero
-        return buffer;
+        byte[] out = new byte[cursor];
+        System.arraycopy(tmp, 0, out, 0, cursor);
+        return out;
     }
 
     public BufferedImage generateGlyphData(boolean preview, final FontResourceResolver resourceResolver) throws TextureGeneratorException, FontFormatException {
@@ -358,28 +485,19 @@ public class Fontc {
 
         // Padding is the pixel amount needed to get a good antialiasing around the glyphs, while cell padding
         // is the extra padding added to the bitmap data to avoid filtering glitches when rendered.
-        int padding = 0;
+        int padding = GetFontMapPadding(fontDesc);
         int cell_padding = 1;
         // Spread is the maximum distance to the glyph edge.
-        float sdf_spread = 0.0f;
+        float sdfSpread = 0.0f;
         // Shadow_spread is the maximum distance to the glyph outline.
-        float sdf_shadow_spread = 0.0f;
+        float sdfShadowSpread = 0.0f;
 
-        if (this.fontDesc.getFont().toLowerCase().endsWith("fnt"))
-        {
+        if (Fontc.isBitmapFont(this.fontDesc)) {
             padding = 0;
             cell_padding = 1;
-        }
-        else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
-            sdf_spread        = getPaddedSdfSpread(fontDesc.getOutlineWidth());
-            sdf_shadow_spread = getPaddedSdfSpread((float)fontDesc.getShadowBlur());
-
-            // The +1 is needed to give a little bit of extra padding since the spread
-            // always gets padded by the sqrt of a pixel diagonal
-            padding = fontDesc.getShadowBlur() + (int)(fontDesc.getOutlineWidth()) + 1;
-        }
-        else {
-            padding = Math.min(4, fontDesc.getShadowBlur()) + (int)(fontDesc.getOutlineWidth());
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
+            sdfSpread        = getPaddedSdfSpread(fontDesc.getOutlineWidth());
+            sdfShadowSpread = getPaddedSdfSpread((float)fontDesc.getShadowBlur());
         }
 
         Color faceColor = new Color(fontDesc.getAlpha(), 0.0f, 0.0f);
@@ -399,28 +517,10 @@ public class Fontc {
             shadowConvolve = new ConvolveOp(kernel, ConvolveOp.EDGE_NO_OP, hints);
         }
         if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
-            // Calculate edge values for both outline and shadow. We must treat them differently
-            // so that we don't use the same precision range for both edges
-            float outline_edge = calculateSdfEdgeLimit(-fontDesc.getOutlineWidth(), sdf_spread);
-            float shadow_edge  = calculateSdfEdgeLimit(-(float)fontDesc.getShadowBlur(), sdf_shadow_spread);
-
-            // Special case!
-            // If there is no blur, the shadow should essentially work the same way as the outline.
-            // This enables effects like a hard drop shadow. In the shader, the pseudo code
-            // that does this looks something like this:
-            // shadow_alpha = mix(shadow_alpha,outline_alpha,floor(shadow_edge))
-            if (fontDesc.getShadowBlur() == 0)
-            {
-                shadow_edge = 1.0f;
-            }
-
-            fontMapBuilder.setSdfSpread(sdf_spread);
-            fontMapBuilder.setSdfOutline(outline_edge);
-            fontMapBuilder.setSdfShadow(shadow_edge);
+            glyphBankBuilder.setSdfSpread(GetFontMapSdfSpread(fontDesc));
+            glyphBankBuilder.setSdfOutline(GetFontMapSdfOutline(fontDesc));
+            glyphBankBuilder.setSdfShadow(GetFontMapSdfShadow(fontDesc));
         }
-        fontMapBuilder.setAlpha(this.fontDesc.getAlpha());
-        fontMapBuilder.setOutlineAlpha(this.fontDesc.getOutlineAlpha());
-        fontMapBuilder.setShadowAlpha(this.fontDesc.getShadowAlpha());
 
         // Load external image resource for BMFont files
         BufferedImage imageBMFont = null;
@@ -443,18 +543,15 @@ public class Fontc {
             inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
 
             // If font has outline or shadow, we need all three channels
-            if ((fontDesc.getOutlineWidth() > 0.0f && this.fontDesc.getOutlineAlpha() > 0.0f)
-            || (fontDesc.getShadowAlpha() > 0.0f)) {
+            if ((fontDesc.getOutlineWidth() > 0.0f && this.fontDesc.getOutlineAlpha() > 0.0f) || (fontDesc.getShadowAlpha() > 0.0f)) {
                 channelCount = 3;
             } else {
                 channelCount = 1;
             }
 
-        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_BITMAP &&
-                   inputFormat == InputFontFormat.FORMAT_BMFONT) {
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_BITMAP && inputFormat == InputFontFormat.FORMAT_BMFONT) {
             channelCount = 4;
-        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD &&
-                   inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD && inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
             // If font has shadow and blur, we'll need 3 channels. Not all platforms universally support
             // texture formats with only 2 channels (such as LUMINANCE_ALPHA)
             if (fontDesc.getShadowBlur() > 0.0f && fontDesc.getShadowAlpha() > 0.0f) {
@@ -464,12 +561,6 @@ public class Fontc {
                 channelCount = 1;
             }
         }
-
-        // The fontMapLayerMask contains a bitmask of the layers that should be rendered
-        // by the font renderer. Note that this functionality requires that the render mode
-        // property of the font resource must be set to MULTI_LAYER. Default behaviour
-        // is to render the font as single layer (for compatability reasons).
-        int fontMapLayerMask = getFontMapLayerMask();
 
         // We keep track of offset into the glyph data bank,
         // this is saved for each glyph to know where their bitmap data is stored.
@@ -533,9 +624,11 @@ public class Fontc {
         int cache_rows = cache_height / cell_height;
 
         int include_glyph_count = glyphs.size();
+
         if (preview) {
             include_glyph_count = Math.min(glyphs.size(), cache_rows * cache_columns);
         }
+
         for (int i = 0; i < include_glyph_count; i++) {
 
             Glyph glyph = glyphs.get(i);
@@ -553,7 +646,7 @@ public class Fontc {
                 glyphImage = drawBMFontGlyph(glyph, imageBMFont);
             } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD &&
                        inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
-                glyphImage = makeDistanceField(glyph, padding, sdf_spread, sdf_shadow_spread, font, sdf_edge, shadowConvolve);
+                glyphImage = makeDistanceField(glyph, padding, sdfSpread, sdfShadowSpread, font, sdfEdge, shadowConvolve);
             } else {
                 throw new FontFormatException("Invalid font format combination!");
             }
@@ -577,8 +670,9 @@ public class Fontc {
 
                 int py = 0;
                 // Get raster data from rendered glyph and store in glyph data bank
-                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x)
+                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x) {
                     paddedGlyphImage.setRGB(x, py, clearData);
+                }
                 py++;
                 for (int y = 0; y < glyphImage.getHeight(); y++, py++) {
                     int px = 0;
@@ -601,46 +695,34 @@ public class Fontc {
                     }
                     paddedGlyphImage.setRGB(px++, py, clearData);
                 }
-                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x)
-                    paddedGlyphImage.setRGB(x, 0, clearData);
+                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x) {
+                    paddedGlyphImage.setRGB(x, py, clearData);
+                }
 
-                Pointer compressedTexture = null;
                 try {
                     int width = paddedGlyphImage.getWidth();
                     int height = paddedGlyphImage.getHeight();
 
-                    ByteBuffer paddedBuffer = toByteArray(paddedGlyphImage, width, height, 4, channelCount);
+                    byte[] uncompressedBytes = toByteArray(paddedGlyphImage, width, height, 4, channelCount);
 
-                    compressedTexture = TexcLibrary.TEXC_CompressBuffer(paddedBuffer, paddedBuffer.limit());
-                    int texcBufferSize = TexcLibrary.TEXC_GetTotalBufferDataSize(compressedTexture);
-                    ByteBuffer buffer = ByteBuffer.allocateDirect(texcBufferSize);
-                    TexcLibrary.TEXC_GetBufferData(compressedTexture, buffer, texcBufferSize);
+                    Texc.Buffer compressedBuffer = TexcLibraryJni.CompressBuffer(uncompressedBytes);
+                    byte[] compressedBytes = compressedBuffer.data;
 
-                    byte[] uncompressedBuffer = new byte[paddedBuffer.limit()];
-                    paddedBuffer.get(uncompressedBuffer);
+                    // If the uncompressed size is smaller we write uncompressed bytes instead
+                    // Note that when writing the uncompressed bytes we need to
+                    // also write the initial byte/flag telling the consumer if
+                    // the glyph is compressed or not.
+                    boolean useCompressed = compressedBuffer.isCompressed && compressedBytes.length < uncompressedBytes.length;
+                    byte[] bytes = useCompressed ? compressedBytes : uncompressedBytes;
 
-                    byte[] compressedBuffer = new byte[buffer.limit()];
-                    buffer.get(compressedBuffer);
-
-                    int size = uncompressedBuffer.length;
-                    int bufferSize = compressedBuffer.length;
-
-                    if (size < bufferSize)
-                    {
-                        bufferSize = size;
-                        compressedBuffer = uncompressedBuffer;
-                    }
+                    glyphDataBank.write(useCompressed ? 1 : 0); // the "header"
+                    glyphDataBank.write(bytes);
 
                     glyph.cache_entry_offset = dataOffset;
-                    glyph.cache_entry_size = compressedBuffer.length;
+                    glyph.cache_entry_size = 1 + bytes.length;
                     dataOffset += glyph.cache_entry_size;
-
-                    glyphDataBank.write(compressedBuffer);
-
                 } catch(IOException e) {
                     throw new TextureGeneratorException(String.format("Failed to generate font texture: %s", e.getMessage()));
-                } finally {
-                    TexcLibrary.TEXC_DestroyBuffer(compressedTexture);
                 }
             }
         }
@@ -653,15 +735,14 @@ public class Fontc {
         }
 
         // Start filling the rest of FontMap
-        fontMapBuilder.setGlyphPadding(cell_padding);
-        fontMapBuilder.setCacheWidth(cache_width);
-        fontMapBuilder.setCacheHeight(cache_height);
-        fontMapBuilder.setGlyphData(ByteString.copyFrom(glyphDataBank.toByteArray()));
-        fontMapBuilder.setCacheCellWidth(cell_width);
-        fontMapBuilder.setCacheCellHeight(cell_height);
-        fontMapBuilder.setGlyphChannels(channelCount);
-        fontMapBuilder.setCacheCellMaxAscent(cell_max_ascent);
-        fontMapBuilder.setLayerMask(fontMapLayerMask);
+        glyphBankBuilder.setGlyphPadding(cell_padding);
+        glyphBankBuilder.setCacheWidth(cache_width);
+        glyphBankBuilder.setCacheHeight(cache_height);
+        glyphBankBuilder.setGlyphData(ByteString.copyFrom(glyphDataBank.toByteArray()));
+        glyphBankBuilder.setCacheCellWidth(cell_width);
+        glyphBankBuilder.setCacheCellHeight(cell_height);
+        glyphBankBuilder.setGlyphChannels(channelCount);
+        glyphBankBuilder.setCacheCellMaxAscent(cell_max_ascent);
 
         BufferedImage previewImage = null;
         if (preview) {
@@ -672,11 +753,18 @@ public class Fontc {
             }
         }
 
+        boolean monospace = true;
+        int prevAdvance = -1;
+
         for (int i = 0; i < include_glyph_count; i++) {
             Glyph glyph = glyphs.get(i);
-            FontMap.Glyph.Builder glyphBuilder = FontMap.Glyph.newBuilder()
+            // The Defold generator clips the SDF image but the stb generator does not.
+            // So, we need to have a width, and an image width, in order to handle the different values at runtime
+            int width = glyph.width + (glyph.width > 0 ? padding * 2 : 0);
+            GlyphBank.Glyph.Builder glyphBuilder = GlyphBank.Glyph.newBuilder()
                 .setCharacter(glyph.c)
-                .setWidth(glyph.width + (glyph.width > 0 ? padding * 2 : 0))
+                .setWidth(width)
+                .setImageWidth(width)
                 .setAdvance(glyph.advance)
                 .setLeftBearing(glyph.leftBearing)
                 .setAscent(glyph.ascent + padding)
@@ -690,9 +778,20 @@ public class Fontc {
                 glyphBuilder.setY(glyph.y);
             }
 
-            fontMapBuilder.addGlyphs(glyphBuilder);
+            glyphBankBuilder.addGlyphs(glyphBuilder);
+
+            if (prevAdvance == -1)
+                prevAdvance = glyph.advance;
+
+            monospace = monospace && (prevAdvance == glyph.advance);
+            prevAdvance = glyph.advance;
         }
 
+        if (include_glyph_count <= 1)
+            monospace = false; // it's likely a dynamic font
+
+        glyphBankBuilder.setIsMonospaced(monospace);
+        glyphBankBuilder.setPadding(padding);
         return previewImage;
 
     }
@@ -701,12 +800,16 @@ public class Fontc {
         return imageBMFontInput.getSubimage(glyph.x, glyph.y, glyph.width, glyph.ascent + glyph.descent);
     }
 
-    private BufferedImage makeDistanceField(Glyph glyph, int padding, float sdf_spread, float sdf_shadow_spread, Font font, float edge, ConvolveOp shadowConvolve) {
+    private BufferedImage makeDistanceField(Glyph glyph, int padding, float sdfSpread, float sdfShadowSpread, Font font, float edge, ConvolveOp shadowConvolve) {
         int width = glyph.width + padding * 2;
         int height = glyph.ascent + glyph.descent + padding * 2;
 
         Shape sh = glyph.vector.getGlyphOutline(0);
-        PathIterator pi = sh.getPathIterator(new AffineTransform(1,0,0,1,0,0));
+        // Normalize the outline by boolean-unioning overlapping contours to avoid
+        // internal edges contributing to the distance field (fixes artifacts for
+        // glyphs composed of multiple vector shapes; see issue #6577)
+        Area area = new Area(sh);
+        PathIterator pi = area.getPathIterator(new AffineTransform(1,0,0,1,0,0));
         pi = new FlatteningPathIterator(pi,  0.1);
 
         double _x = 0, _y = 0;
@@ -747,9 +850,9 @@ public class Fontc {
         double u1 = u0 + width;
         double v1 = v0 + height;
 
-        double[] distance_data = new double[width*height];
+        double[] distanceData = new double[width*height];
 
-        df.render(distance_data, u0, v0, u1, v1, width, height);
+        df.render(distanceData, u0, v0, u1, v1, width, height);
 
         double widthInverse  = 1 / (double)width;
         double heightInverse = 1 / (double)height;
@@ -762,38 +865,38 @@ public class Fontc {
             for (int u=0;u<width;u++) {
                 double gx = u0 + widthInverse * u * (u1 - u0);
                 double gy = v0 + heightInverse * v * (v1 - v0);
-                double distance_to_edge   = distance_data[ofs + u];
-                double distance_to_border = -(distance_to_edge - fontDesc.getOutlineWidth());
+                double distanceToEdge   = distanceData[ofs + u];
+                double distanceToBorder = -(distanceToEdge - fontDesc.getOutlineWidth());
 
-                if (!sh.contains(gx, gy)) {
-                    distance_to_edge = -distance_to_edge;
+                if (!area.contains(gx, gy)) {
+                    distanceToEdge = -distanceToEdge;
                 }
 
-                float distance_to_edge_normalized = calculateSdfEdgeLimit((float)distance_to_edge, sdf_spread);
+                float distanceToEdgeNormalized = calculateSdfEdgeLimit((float)distanceToEdge, sdfSpread);
 
                 // Map outgoing distance value to 0..255
-                int outline_channel = (int)(255.0f * distance_to_edge_normalized);
-                outline_channel     = Math.max(0,Math.min(255,outline_channel));
+                int outlineChannel = (int)(255.0f * distanceToEdgeNormalized);
+                outlineChannel     = Math.max(0,Math.min(255,outlineChannel));
 
-                float sdf_outline = fontMapBuilder.getSdfOutline();
+                float sdfOutline = glyphBankBuilder.getSdfOutline();
 
                 // This is needed to 'fill' the shadow body since
                 // we have no good way of knowing if the pixel is inside or outside
                 // of the shadow limit
-                if (distance_to_edge_normalized > sdf_outline)
+                if (distanceToEdgeNormalized > sdfOutline)
                 {
-                	distance_to_border = edge;
+                	distanceToBorder = edge;
                 }
 
                 // Calculate shadow distribution separately in a different channel since we spread the
                 // values across the distance to the outline border and not to the edge.
-                float distance_to_border_normalized = calculateSdfEdgeLimit((float)distance_to_border, sdf_shadow_spread);
+                float distanceToBorder_normalized = calculateSdfEdgeLimit((float)distanceToBorder, sdfShadowSpread);
 
                 // Map outgoing distance value to 0..255
-                int shadow_channel = (int)(255.0f * distance_to_border_normalized);
-                shadow_channel     = Math.max(0,Math.min(255,shadow_channel));
+                int shadowChannel = (int)(255.0f * distanceToBorder_normalized);
+                shadowChannel     = Math.max(0,Math.min(255,shadowChannel));
 
-                image.setRGB(u, v, 0x010000 * outline_channel | 0x000001 * shadow_channel);
+                image.setRGB(u, v, 0x010000 * outlineChannel | 0x000001 * shadowChannel);
             }
         }
 
@@ -812,10 +915,10 @@ public class Fontc {
 
             for (int v=0;v<height;v++) {
                 for (int u=0;u<width;u++) {
-                    int edge_outline_channel = image.getRGB(u,v);
-                    int shadow_channel = blurredShadowImage.getRGB(u,v);
+                    int edgeOutlineChannel = image.getRGB(u,v);
+                    int shadowChannel = blurredShadowImage.getRGB(u,v);
 
-                    image.setRGB(u,v,edge_outline_channel & 0xFFFF00 | shadow_channel & 0xFF);
+                    image.setRGB(u,v,edgeOutlineChannel & 0xFFFF00 | shadowChannel & 0xFF);
                 }
             }
         }
@@ -904,58 +1007,31 @@ public class Fontc {
        }
     }
 
-    private int getFontMapLayerMask()
-    {
-        int fontMapLayerMask = LAYER_FACE;
-
-        if (this.fontDesc.getRenderMode() == FontRenderMode.MODE_MULTI_LAYER)
-        {
-            if (this.fontDesc.getOutlineAlpha() > 0 &&
-                this.fontDesc.getOutlineWidth() > 0)
-            {
-                fontMapLayerMask |= LAYER_OUTLINE;
-            }
-
-            if (this.fontDesc.getShadowAlpha() > 0 &&
-                this.fontDesc.getAlpha() > 0)
-            {
-                fontMapLayerMask |= LAYER_SHADOW;
-            }
-        }
-
-        return fontMapLayerMask;
-    }
-
     public BufferedImage compile(InputStream fontStream, FontDesc fontDesc, boolean preview, final FontResourceResolver resourceResolver) throws FontFormatException, TextureGeneratorException, IOException {
-        this.fontDesc = fontDesc;
-        this.fontMapBuilder = FontMap.newBuilder();
+        this.fontDesc       = fontDesc;
+        this.glyphBankBuilder = GlyphBank.newBuilder();
+        this.glyphBankBuilder.setImageFormat(fontDesc.getOutputFormat());
 
-        if (fontDesc.getFont().toLowerCase().endsWith("fnt")) {
+        if (Fontc.isBitmapFont(fontDesc)) {
             FNTBuilder(fontStream);
         } else {
             TTFBuilder(fontStream);
         }
-        fontMapBuilder.setMaterial(fontDesc.getMaterial() + "c");
-        fontMapBuilder.setImageFormat(fontDesc.getOutputFormat());
 
         return generateGlyphData(preview, resourceResolver);
-    }
-
-    public FontMap getFontMap() {
-        return fontMapBuilder.build();
     }
 
     public BufferedImage generatePreviewImage() throws IOException {
 
         Graphics2D g;
-        BufferedImage previewImage = new BufferedImage(fontMapBuilder.getCacheWidth(), fontMapBuilder.getCacheHeight(), BufferedImage.TYPE_3BYTE_BGR);
+        BufferedImage previewImage = new BufferedImage(glyphBankBuilder.getCacheWidth(), glyphBankBuilder.getCacheHeight(), BufferedImage.TYPE_3BYTE_BGR);
         g = previewImage.createGraphics();
         g.setBackground(Color.BLACK);
         g.clearRect(0, 0, previewImage.getWidth(), previewImage.getHeight());
         setHighQuality(g);
 
-        int cache_columns = fontMapBuilder.getCacheWidth() / fontMapBuilder.getCacheCellWidth();
-        int cache_rows = fontMapBuilder.getCacheHeight() / fontMapBuilder.getCacheCellHeight();
+        int cache_columns = glyphBankBuilder.getCacheWidth() / glyphBankBuilder.getCacheCellWidth();
+        int cache_rows = glyphBankBuilder.getCacheHeight() / glyphBankBuilder.getCacheCellHeight();
 
         BufferedImage glyphImage;
         for (int i = 0; i < glyphs.size(); i++) {
@@ -969,8 +1045,8 @@ public class Fontc {
                 break;
             }
 
-            int x = col * fontMapBuilder.getCacheCellWidth();
-            int y = row * fontMapBuilder.getCacheCellHeight();
+            int x = col * glyphBankBuilder.getCacheCellWidth();
+            int y = row * glyphBankBuilder.getCacheCellHeight();
 
             glyph.x = x;
             glyph.y = y;
@@ -985,21 +1061,49 @@ public class Fontc {
         return previewImage;
     }
 
+    private static void Usage() {
+        System.err.println("Usage: fontc fontfile outfile [basedir] [dynamic]");
+        System.exit(1);
+    }
+
+    // run with java -cp bob.jar com.dynamo.bob.font.Fontc foobar.font foobar.fontc
     public static void main(String[] args) throws FontFormatException, TextureGeneratorException {
         try {
             System.setProperty("java.awt.headless", "true");
-            if (args.length != 2 && args.length != 3 && args.length != 4)    {
-                System.err.println("Usage: fontc fontfile [basedir] outfile");
-                System.exit(1);
+
+            File    fontInput   = null;
+            String  outfile     = null;
+            String  basedir     = ".";
+            boolean dynamic     = false;
+
+            if (args.length >= 1) {
+                fontInput = new File(args[0]);
             }
 
-            String basedir = ".";
-            String outfile = args[1];
-            if (args.length >= 3) {
-                basedir = args[1];
-                outfile = args[2];
+            if (args.length >= 2) {
+                outfile = args[1];
             }
-            final File fontInput = new File(args[0]);
+
+            if (args.length >= 3) {
+                basedir = args[2];
+            }
+
+            if (args.length >= 4) {
+                dynamic = Boolean.parseBoolean(args[3]);
+            }
+
+            if (fontInput == null)
+            {
+                System.err.println("No input .font specified!");
+                Usage();
+            }
+
+            if (outfile == null)
+            {
+                System.err.println("No output file specified!");
+                Usage();
+            }
+
             FileInputStream stream = new FileInputStream(fontInput);
             InputStreamReader reader = new InputStreamReader(stream);
             FontDesc.Builder builder = FontDesc.newBuilder();
@@ -1025,24 +1129,79 @@ public class Fontc {
             }
 
             // Compile fontdesc to fontmap
+            final String parentDir = fontInput.getParent();
             Fontc fontc = new Fontc();
             String fontInputFile = basedir + File.separator + fontDesc.getFont();
             BufferedInputStream fontInputStream = new BufferedInputStream(new FileInputStream(fontInputFile));
-            fontc.compile(fontInputStream, fontDesc, false, new FontResourceResolver() {
+            BufferedImage previewImage = fontc.compile(fontInputStream, fontDesc, false, resourceName -> {
+                Path resPath = Paths.get(parentDir, resourceName);
+                BufferedInputStream resStream = new BufferedInputStream(new FileInputStream(resPath.toString()));
 
-                @Override
-                public InputStream getResource(String resourceName) throws FileNotFoundException {
-                    Path resPath = Paths.get(fontInput.getParent().toString(), resourceName);
-                    BufferedInputStream resStream = new BufferedInputStream(new FileInputStream(resPath.toString()));
-
-                    return resStream;
-                }
+                return resStream;
             });
             fontInputStream.close();
 
+            if (previewImage != null) {
+                ImageIO.write(previewImage, "png", new File(outfile + "_preview.png"));
+            }
+
+            Path basedirAbsolutePath = Paths.get(basedir).toAbsolutePath();
+
+            FontMap.Builder fontMapBuilder = FontMap.newBuilder();
+            fontMapBuilder.setMaterial(BuilderUtil.replaceExt(fontDesc.getMaterial(), ".material", ".materialc"));
+
+            if (!dynamic)
+            {
+                // Construct the project-relative path based from the input font file
+                Path glyphBankProjectPath  = Paths.get(fontInput.getAbsolutePath().replace(".font", ".glyph_bankc"));
+                Path glyphBankRelativePath = basedirAbsolutePath.relativize(glyphBankProjectPath);
+                String glyphBankProjectStr = "/" + glyphBankRelativePath.toString().replace("\\","/");
+
+                fontMapBuilder.setGlyphBank(glyphBankProjectStr);
+
+                // Write glyph bank next to the output .fontc file
+                String glyphBankOutputPath             = outfile.replace(".fontc", ".glyph_bankc");
+                FileOutputStream glyphBankOutputStream = new FileOutputStream(glyphBankOutputPath);
+                fontc.getGlyphBank().writeTo(glyphBankOutputStream);
+            }
+            else
+            {
+                if (fontDesc.getOutputFormat() != FontTextureFormat.TYPE_DISTANCE_FIELD) {
+                    System.err.printf("Dynamic fonts currently only support distance fields! '%s'\n", fontInput);
+                    System.exit(1);
+                }
+
+                fontMapBuilder.setFont(fontDesc.getFont());
+
+                File src = new File(fontInputFile);
+
+                Path fontProjectPath  = Paths.get(fontInput.getAbsolutePath());
+                Path ttfRelativePath = basedirAbsolutePath.relativize(fontProjectPath.getParent());
+
+                File outFontc = new File(outfile);
+                File dst = new File(outFontc.getParent(), src.getName());
+                Files.copy(src.toPath(), dst.toPath(), StandardCopyOption.REPLACE_EXISTING);
+            }
+
+            fontMapBuilder.setSize(fontDesc.getSize());
+            fontMapBuilder.setAntialias(fontDesc.getAntialias());
+            fontMapBuilder.setShadowX(fontDesc.getShadowX());
+            fontMapBuilder.setShadowY(fontDesc.getShadowY());
+            fontMapBuilder.setShadowBlur(fontDesc.getShadowBlur());
+            fontMapBuilder.setShadowAlpha(fontDesc.getShadowAlpha());
+            fontMapBuilder.setAlpha(fontDesc.getAlpha());
+            fontMapBuilder.setOutlineAlpha(fontDesc.getOutlineAlpha());
+            fontMapBuilder.setOutlineWidth(fontDesc.getOutlineWidth());
+            fontMapBuilder.setLayerMask(GetFontMapLayerMask(fontDesc));
+
+            fontMapBuilder.setOutputFormat(fontDesc.getOutputFormat());
+            fontMapBuilder.setRenderMode(fontDesc.getRenderMode());
+
             // Write fontmap file
             FileOutputStream fontMapOutputStream = new FileOutputStream(outfile);
-            fontc.getFontMap().writeTo(fontMapOutputStream);
+
+            fontMapBuilder.build().writeTo(fontMapOutputStream);
+
             fontMapOutputStream.close();
 
         } catch (IOException e) {
